stave-macros/tests/fail/methods_generic_impl.rs
use stave_macros::methods;

struct Widget;

#[methods]
impl<T> Widget {
    fn noop(&self) {}
}

fn main() {}
